--- a/.github/workflows/xformers.yml
+++ b/.github/workflows/xformers.yml
@@ -7,7 +7,7 @@ on:
   
 env:
   # you need at least cuda 5.0 for some of the stuff compiled here.
-  TORCH_CUDA_ARCH_LIST: "5.0+PTX 5.2+PTX 6.0 6.1 7.0 7.5 8.0 8.6"
+  TORCH_CUDA_ARCH_LIST: "7.5"
   FORCE_CUDA: 1
   MAX_JOBS: 1 # will crash otherwise
   DISTUTILS_USE_SDK: 1 # otherwise distutils will complain on windows about multiple versions of msvc
@@ -20,18 +20,10 @@ jobs:
       matrix:
         python:
           - "3.10"
-          - "3.9"
-          - "3.8"
         config:
           - cuda_version: "11.8.0"
             pip_index: https://download.pytorch.org/whl/nightly/cu118
             cuda_run_file: https://developer.download.nvidia.com/compute/cuda/11.8.0/local_installers/cuda_11.8.0_520.61.05_linux.run
-          - cuda_version: "11.7.1"
-            pip_index: https://download.pytorch.org/whl/nightly/cu117
-            cuda_run_file: https://developer.download.nvidia.com/compute/cuda/11.7.1/local_installers/cuda_11.7.1_515.65.01_linux.run
-          - cuda_version: "11.6.2"
-            pip_index: https://download.pytorch.org/whl/nightly/cu116
-            cuda_run_file: https://developer.download.nvidia.com/compute/cuda/11.6.2/local_installers/cuda_11.6.2_510.47.03_linux.run
     runs-on: ubuntu-22.04
     container: quay.io/pypa/manylinux2014_x86_64
     timeout-minutes: 360
@@ -69,7 +61,7 @@ jobs:
       - name: Build
         run: |
           python${{matrix.python}} -m pip install wheel setuptools
-          python${{matrix.python}} -m pip install --pre torch torchvision torchaudio triton --extra-index-url ${{ matrix.config.pip_index }} --force
+          python${{matrix.python}} -m pip install --pre torch torchvision torchaudio triton --index-url ${{ matrix.config.pip_index }}
           python${{matrix.python}} -m pip install -r requirements.txt
           python${{matrix.python}} setup.py bdist_wheel -d dist/ -k --plat-name manylinux2014_x86_64
       - name: get vars
