--- a/.github/workflows/xformers.yml
+++ b/.github/workflows/xformers.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Build
         run: |
           python${{matrix.python}} -m pip install wheel setuptools ninja
-          python${{matrix.python}} -m pip install --pre torch torchvision torchaudio triton --index-url ${{ matrix.config.pip_index }}
+          python${{matrix.python}} -m pip install --pre torch torchvision torchaudio pytorch-triton --index-url ${{ matrix.config.pip_index }}
           python${{matrix.python}} -m pip install -r requirements.txt
           python${{matrix.python}} setup.py bdist_wheel -d dist/ -k --plat-name manylinux2014_x86_64
       - name: get vars
