--- a/.github/workflows/xformersstable.yml
+++ b/.github/workflows/xformersstable.yml
@@ -60,7 +60,9 @@ jobs:
           cat ${GITHUB_ENV}
       - name: Build
         run: |
-          python${{matrix.python}} -m pip install wheel setuptools twine ninja torch torchvision torchaudio pytorch-triton --index-url ${{matrix.config.pip_index}}
+          python${{matrix.python}} -m venv --upgrade-deps venv
+          . .venv/bin/activate
+          python${{matrix.python}} -m pip install wheel ninja torch torchvision torchaudio pytorch-triton --index-url ${{matrix.config.pip_index}}
           python${{matrix.python}} setup.py bdist_wheel -d dist/ -k --plat-name manylinux2014_x86_64
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@2.5.0
