--- a/.github/workflows/xformers.yml
+++ b/.github/workflows/xformers.yml
@@ -20,9 +20,10 @@ jobs:
       matrix:
         python:
           - "3.10"
+          - "3.9"
         config:
           - cuda_version: "11.8.0"
-            pip_index: https://download.pytorch.org/whl/nightly/cu118
+            pip_index: https://download.pytorch.org/whl/cu118
             cuda_run_file: https://developer.download.nvidia.com/compute/cuda/11.8.0/local_installers/cuda_11.8.0_520.61.05_linux.run
     runs-on: ubuntu-22.04
     container: quay.io/pypa/manylinux2014_x86_64
