--- a/.github/workflows/xformers.yml
+++ b/.github/workflows/xformers.yml
@@ -64,7 +64,7 @@ jobs:
           python${{matrix.python}} -m venv --upgrade-deps venv
           source venv/bin/activate
           python${{matrix.python}} -m pip install wheel ninja
-          python${{matrix.python}} -m pip install --pre torch torchvision torchaudio pytorch-triton --index-url ${{ matrix.config.pip_index }}
+          python${{matrix.python}} -m pip install --pre torch torchvision torchaudio triton --index-url ${{ matrix.config.pip_index }}
           python${{matrix.python}} -m pip install -r requirements.txt
           python${{matrix.python}} setup.py bdist_wheel -d dist/ -k --plat-name manylinux2014_x86_64
       - name: get vars
