--- a/.github/workflows/xformers.yml
+++ b/.github/workflows/xformers.yml
@@ -23,7 +23,7 @@ jobs:
           - "3.9"
         config:
           - cuda_version: "11.8.0"
-            pip_index: https://download.pytorch.org/whl/cu118
+            pip_index: https://download.pytorch.org/whl/nightly/cu118
             cuda_run_file: https://developer.download.nvidia.com/compute/cuda/11.8.0/local_installers/cuda_11.8.0_520.61.05_linux.run
     runs-on: ubuntu-22.04
     container: quay.io/pypa/manylinux2014_x86_64
@@ -61,10 +61,9 @@ jobs:
           echo "datetime=$(/bin/date -u +"%Y/%m/%d/%H%M")" >> $GITHUB_OUTPUT
       - name: Build
         run: |
-          python${{matrix.python}} -m venv --upgrade-deps venv
-          source venv/bin/activate
+          python${{matrix.python}} -m venv --upgrade-deps venv && source venv/bin/activate
           python${{matrix.python}} -m pip install wheel ninja
-          python${{matrix.python}} -m pip install --pre torch torchvision torchaudio triton --index-url ${{ matrix.config.pip_index }}
+          python${{matrix.python}} -m pip install --pre torch torchvision torchaudio pytorch-triton --index-url ${{ matrix.config.pip_index }}
           python${{matrix.python}} -m pip install -r requirements.txt
           python${{matrix.python}} setup.py bdist_wheel -d dist/ -k --plat-name manylinux2014_x86_64
       - name: get vars
